--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -10,37 +10,31 @@
 </head>
 <body>
     <header>
-        <nav class="navbar navbar-expand-sm navbar-toggleable-sm navbar-light bg-white border-bottom box-shadow mb-3">
-            <div class="container-fluid">
-                <a class="navbar-brand" asp-area="" asp-controller="Home" asp-action="Index">MyPortfolio</a>
-                <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target=".navbar-collapse" aria-controls="navbarSupportedContent"
-                        aria-expanded="false" aria-label="Toggle navigation">
-                    <span class="navbar-toggler-icon"></span>
-                </button>
-                <div class="navbar-collapse collapse d-sm-inline-flex justify-content-between">
-                    <ul class="navbar-nav flex-grow-1">
-                        <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Index">Home</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>
-                        </li>
-                    </ul>
+        <div class="container-fluid">
+            <nav>
+                <div class="logo">folio<b>.</b></div>
+                <ul class="navItems">
+                    <li><a class="" asp-area="" asp-controller="Home" asp-action="Index">Home</a></li>
+                    <li><a class="" asp-area="" asp-controller="Home" asp-action="About">About</a></li>
+                    <li><a class="" asp-area="" asp-controller="Home" asp-action="Skills">Skills</a></li>
+                    <li><a class="" asp-area="" asp-controller="Home" asp-action="Blog">Blog</a></li>
+                </ul>
+                <div class="links">
+                    <a href="mailto:https://mail.google.com/mail/u/1/#inbox"><ion-icon name="mail-outline"></ion-icon></a>
+                    <a href="https://t.me/NoheartIT"><ion-icon name="chatbubble-outline"></ion-icon></a>
+                    <a href="https://www.instagram.com/kirill.ashihmin/?next=%2F"><ion-icon name="logo-instagram"></ion-icon></a>
                 </div>
-            </div>
-        </nav>
+            </nav>
+        </div>
+
     </header>
     <div class="container">
         <main role="main" class="pb-3">
             @RenderBody()
         </main>
     </div>
-
-    <footer class="border-top footer text-muted">
-        <div class="container">
-            &copy; 2023 - MyPortfolio - <a asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>
-        </div>
-    </footer>
+    <script type="module" src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.esm.js"></script>
+    <script nomodule src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.js"></script>
     <script src="~/lib/jquery/dist/jquery.min.js"></script>
     <script src="~/lib/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
     <script src="~/js/site.js" asp-append-version="true"></script>
