--- a/wwwroot/css/site.css
+++ b/wwwroot/css/site.css
@@ -1,5 +1,5 @@
 @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@500&display=swap');
-*{
+* {
     margin: 0;
     padding: 0;
     box-sizing: border-box;
@@ -25,7 +25,7 @@ body {
   margin-bottom: 60px;
   overflow: hidden;
 }
-nav{
+nav {
     display: flex;
     width: 100%;
     justify-content: space-around;
@@ -33,6 +33,7 @@ nav{
     z-index: 111;
     line-height: 80px;
 }
+
 .logo{
     display: flex;
     font-size: 40px;
@@ -76,4 +77,162 @@ b{
 
 .links ion-icon{
     color: #3d535f;
+}
+
+.wrapper{
+    display: flex;
+    width: 100%;
+    height: 85vh;
+    align-items: center;
+    align-content: center;
+    padding: 0 20%;
+    overflow: hidden;
+}
+
+.wrapper::before{
+    position: absolute;
+    content:'';
+    height: 500px;
+    width: 500px;
+    border-radius: 50%;
+    left: -10%;
+    top: 40%;
+    background: linear-gradient(45deg, #ff00e2, #7f00ff);
+    animation: object1 3s linear infinite;
+}
+
+@keyframes object1 {
+    50% {
+        left: -11%;
+        top: 41%;
+    }
+}
+
+.wrapper::after{
+    position: absolute;
+    content:'';
+    height: 200px;
+    width: 200px;
+    border-radius: 50%;
+    left: 35%;
+    top: 12%;
+    background: linear-gradient(45deg, #ff00e2, #7f00ff);
+    animation: object2 3s linear infinite;
+}
+
+@keyframes object2 {
+    50% {
+        left: 35%;
+        top: 10%;
+    }
+}
+
+.cols{
+    width: 50%;
+}
+
+.cols0{
+    z-index: 5;
+}
+
+.topline {
+    display: block;
+    position: relative;
+    font-size: 35px;
+    letter-spacing: 3px;
+    color: #3d535f;
+}
+
+.topline::before{
+    content: '<';
+    font-size: 25px;
+    height: 4px;
+    width: 100px;
+    bottom: 10px;
+    color: #7f00ff;
+}
+.topline::after{
+    content: '/>';
+    font-size: 25px;
+    height: 4px;
+    width: 100px;
+    bottom: 10px;
+    color: #7f00ff;
+}
+h1 {
+    display: block;
+    font-size: 7em;
+    font-weight: 900;
+    color: #3d535f;
+}
+
+.multiText {
+    color: #7f00ff;
+    text-transform: capitalize;
+}
+
+p {
+    display: block;
+    width: 90%;
+    font-size: 1.2em;
+    color: #3d535f;
+}
+
+.btns{
+    width: 100%;  
+}
+
+button {
+    outline: none;
+    border: none;
+    cursor: pointer;
+    font-size: 25px;
+    font-weight: 400;
+    color: #ffffff;
+    background-color: #3d535f;
+    padding: 5px 20px;
+    margin: 40px 5px;
+    letter-spacing: 2px;
+    text-transform: capitalize;
+    box-shadow: 0 20px 10px rgba(0,0,0,0.4);
+}
+.imgBox {
+    position: relative;
+    width: 100%;
+    height: 100%;
+    margin: 0 250px;
+}
+
+.imgBox img{    
+    position: relative;
+    height: 100%;
+    width: calc(130%-80px);
+    top: -100%;
+    right: 50px;
+    animation: animateUser 3s linear infinite;
+}
+
+@keyframes animateUser{
+    50%{
+        right: 30px;
+        margin-top: 30px;   
+    }
+}
+
+.imgBox #splash {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%) rotate(-20deg);
+    width: 160%;
+    animation: animateSplash 3s linear infinite;
+    margin: 0 -200px;
+}
+
+@keyframes animateSplash {
+    50% {
+        top: 48%;
+        left: 52%;
+        width: 155%;
+    }
 }
