--- a/Views/Home/About.cshtml
+++ b/Views/Home/About.cshtml
@@ -1,3 +1,21 @@
 ﻿@{
     ViewData["Title"] = "About Me";
 }
+
+<div class="textBlock">
+    <div>
+        <h2>About Me</h2>
+    </div>
+    <div class="aboutMe">
+        <span>
+            Здравствуйте. Меня зовут Кирилл, я бывший FullStack-разработчик. Ищу в данный момент работу в Екатеринбурге. Готов к переезду. 
+            Образование: имею среднее профессиональное образование по специальности "администратор 
+            баз данных". В данный момент учусь по специальности "Прикладная информатика" на высшее
+            образование.
+            Опыт: Коммерческий опыт разработки 6 месяцев со стеком C# + Angular JS. Работал с ajax
+            запросами, MVC, Razor, jquery, EF и Linq. Работал с базой данных SQL Server.
+            Личные качества: Целеустремленный, ответственный, готов учиться и развиваться в данном
+            направлении.
+        </span>
+    </div>
+</div>
