--- a/wwwroot/css/site.css
+++ b/wwwroot/css/site.css
@@ -238,6 +238,41 @@ button {
 @keyframes animateSplash {
     50% {
         top: 49%;
-        left: 51%;
     }
+}
+
+.textBlock {
+    width: 100%;
+    height: 100%;
+    align-items: center;
+    align-content: center;
+    overflow: hidden;
+    margin: 15vh 20vh;
+}
+
+.textBlock h2 { 
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 50%;
+    height: 100%;
+    color: #ffffff;
+    font-size: 6em; 
+    border: 2px solid;
+    border-radius: 5px 20px;
+    background-color: #7f00ff;
+    letter-spacing: 3px;
+}
+
+.aboutMe {
+    height: 100%;
+    width: 80%;
+    padding: 10px 20px 10px 20px;
+    text-align: justify;
+    border: 2px solid;
+    text-indent: 50px;
+    font-size: 2em;
+    color: #ffff;
+    background-color: #3d535f;
+    border-radius: 20px 5px;
 }
